3rd sentence on gitbash

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <p>mastering github</p>
   <h1>you can learn anything</h1>
   <h1> just keep working hard</h1>
+<h1>leave the rest to Allah</h1>
   
 </body>
 </html>
